Settings: Initial checkin of YASP
Based on implementations by DU and OmniROM,
so credits to mazda and maxwen for this.

spezi77:
-Added our new Pixel Dust icon for Ten. Credits to Roger Truttmann!
-Moved PDSettings into System Settings

NurKeinNeid:
-Change icon to Derp owl
-Move to top level settings

@idoybh edits: Changed to our icon, adapted to Android.bp

Change-Id: If29de8999bd198afb8190363a42c96a5927879f9
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,7 +104,7 @@
     <uses-permission android:name="android.permission.INSTALL_DYNAMIC_SYSTEM" />
     <uses-permission android:name="android.permission.BIND_CELL_BROADCAST_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    
+
     <application android:label="@string/settings_label"
             android:icon="@drawable/ic_launcher_settings"
             android:theme="@style/Theme.Settings"
@@ -3402,6 +3402,23 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                        android:value="com.android.settings.sound.MediaControlsSettings" />
+        </activity>
+
+        <!-- YAAP Settings -->
+        <activity android:name=".Settings$YAAPSettingsActivity"
+            android:label="@string/yaap_settings_title"
+            android:icon="@drawable/ic_yaap_settings_icon"
+            android:parentActivityName="com.android.settings">
+            <intent-filter android:priority="69">
+                <action android:name="com.android.settings.YAAP_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.yasp.settings.YaapSettings" />
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
